Add IntelliJ setup reminders to create-feature skill
Remind user to override local Maven repository path and disable
the --release cross-compilation flag when opening worktrees in IDEA.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>